@@ -1,3 +1,11 @@
+2004-12-03  Alexander Gottwald  <ago at freedesktop dot org>
+
+	* windialogs.c:
+	* win.h:
+	* Imakefile:
+	* winerror.c:
+	Removed scprintf, aprintf and snprintf stuff and use newXprintf
+
 2004-12-02  Alexander Gottwald  <ago at freedesktop dot org>
 
 	* winwin32rootless.c:
